--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
      <link href="css/main.css" type="text/css" rel="stylesheet">
   </head>
   <body>
+    <div class="container">
+      <nav>
     <ul>
       <li><a href="#">Home</a></li>
       <li><a href="#">About</a>
@@ -33,6 +35,8 @@
       </li>
       <li><a href="#">News</a></li>
     </ul>
+  </nav>
+  </div>
   </body>
 </html>
 
